# CMake

./: CMakeLists.txt  README.md  main.c  main.cpp
lib/PrintTask/: PrintTask.cpp  PrintTask.h
lib/other/: other.cpp  other.h
static/point/: point.cpp  point.h
static/pointerTest/: pointerTest.cpp  pointerTest.h
static/test/: test.cpp  test.h  test.hpp
static/testClass/: testClass.cpp  testClass.h  testClassT.h
